--- a/eplus-henkan.html
+++ b/eplus-henkan.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1> e+ 変換機</h1>
-    <p>8e+16 みたいなやつを80000000000000000 のように変換します</p>
+    <p>8e+16 みたいなやつを80000000000000000 のように変換する</p>
+    
   </body>
 </html>
