--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   </head>
   <body>
     <h1> e+ 変換機</h1>
-    <p>8e+16 みたいなやつを80000000000000000 のように変換する</p>
-    
+    <p>8e+16 みたいなやつを80000000000000000 のように変換します</p>
+    <form oninput="op1.value = Number(a.value) + Number(b.value);">
+    <input type="number" name="a" value="0">
+      ＋ 
+      <input type="number" name="b" value="0">
+       ＝ 
+      <output name="op1" style="background:#FCC;">0</output>
+    </form>
   </body>
 </html>
