--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <body>
     <h1> e+ 変換機</h1>
     <p>8e+16 みたいなやつを80000000000000000 のように変換します</p>
-    <form oninput="op1.value = Number(a.value) + Number(b.value);">
-    <input type="number" name="a" value="0">
-      ＋ 
-      <input type="number" name="b" value="0">
-       ＝ 
-      <output name="op1" style="background:#FCC;">0</output>
+    <form oninput="document.getElementById('op1').value =
+      parseInt(document.getElementById('a').value, 10) +
+      parseInt(document.getElementById('b').value, 10)">
+      <input type="number" id="a">
+       ＋ 
+      <input type="number" id="b">
+      ＝ 
+      <output for="a b" id="op1" style="background:#FCC;"></output>
+      </form>
     </form>
   </body>
 </html>
