--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> e+ 変換機</h1>
-    <p>8e+16 みたいなやつを80000000000000000 のように変換します</p>
+    <p>8e+16 みたいなやつを80000000000000000 のように変換する</p>
     <form oninput="document.getElementById('op1').value =
       parseInt(document.getElementById('a').value, 10) +
       parseInt(document.getElementById('b').value, 10)">
