--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        e+ 
       <input type="number" id="b">
       = 
-      <output for="a b" id="op1" style="background:#FCC;"></output>
+      <output for="a b b a" id="op1" style="background:#FCC;"></output>
       </form>
     </form>
   </body>
