--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <body>
     <h1> e+ 変換機</h1>
     <p>8e+16 みたいなやつを80000000000000000 のように変換する</p>
-    <form oninput="document.getElementById('op1').value =
-      parseInt(document.getElementById('a').value, 10) +
-      parseInt(document.getElementById('b').value, 10)">
+    <form>
       <input type="number" id="a">
        e+ 
       <input type="number" id="b">
-      = 
+       =
       <output for="a b b a" id="op1" style="background:#FCC;"></output>
+      <input type="button" onclick="document.getElementById('op1').value =
+      parseInt(document.getElementById('a').value, 10) *
+      parseInt(document.getElementById('b').value, 10)" value="計算">
+      </form>
       </form>
     </form>
   </body>
