--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        e+ 
       <input type="number" id="b">
        =
-      <output for="a b b a" id="op1" style="background:#FCC;"></output>
+      <div class="box"><p>       </p></div>
       <br>
       <input type="button" onclick="document.getElementById('op1').value =
       parseInt(document.getElementById('a').value, 10) *
