--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     <h1> e+ 変換機</h1>
     <p>8e+16 みたいなやつを80000000000000000 のように変換する</p>
     <form>
-      <input type="number" id="a">
-       e+ 
-      <input type="number" id="b">
-       =
+      <input type="number" name="a" value="0">
+      e+
+      <input type="number" name="b" value="0">
+      = 
       <output name="op1" style="background:#FCC;">0</output>
       <br>
-      <input type="button" onclick="document.getElementById('op1').value =
-      parseInt(document.getElementById('a').value, 10) *
-      parseInt(document.getElementById('b').value, 10)" value="計算">
+      <input type="button" onclick="op1.value = Number(a.value) * Number(b.value);" value="変換">
       </form>
-      </form>
-    </form>
   </body>
 </html>
