--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     		 <input type="number" name="a" value="0">	
      		 <br>
      		 <input type="button" onclick="document.write( Math.toString(Number(a.value)));
-     		 document.write('<hr>' + Number(a);" value="変換">
+     		 document.write('<hr>' + Number(a));" value="変換">
      		 </form>
      		 <script src="math_extension.js"></script>
 		</body>
