--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     		 <input type="number" name="a" value="0">	
      		 <br>
      		 <input type="button" onclick="document.write( Math.toString(Number(a.value)));
-     		 document.write('<hr>' + '<a href="https://legrs.github.io/eplus-henkan/">もう一度変換</a>');" value="変換">
-		 
+     		 document.write('<hr>');" value="変換">
+		 <a href="https://legrs.github.io/eplus-henkan/">もう一度変換</a>
      		 </form>
      		 <script src="math_extension.js"></script>
 		</body>
