--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     		 <input type="number" name="a" value="0">	
      		 <br>
      		 <input type="button" onclick="document.write( Math.toString(Number(a.value)));
-     		 document.write('<hr>
-	         <a href="https://legrs.github.io/eplus-henkan/">もう一度変換</a>' );" value="変換">
+     		 document.write('<hr> <p>F5を押してもう一度変換</p>' );" value="変換">
      		 </form>
      		 <script src="math_extension.js"></script>
 		</body>
