--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<body>
 			<h1>e変換</h1>
 			<p>8e+16のような指数を80000000000000000のような数字に変える</p>
-			<p>全角で入力 </p>
+			<p>半角で入力 </p>
 			<form>
     		 <input type="number" name="a" value="0">	
      		 <br>
